# monaka

./: LICENSE  README.md  TAGS  Text  monaka.cabal  stack.yaml
app/: Main.hs
src/Monaka/: .#Markov.hs  Haiku.hs  Markov.hs  Poem.hs  Poetry.hs
src/Twitter/: Status.hs  TwitterBot.hs
src/Web/: Twitter.hs
test/: Spec.hs
