name:                monaka
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jnhnd/monaka#readme
license:             BSD3
license-file:        LICENSE
author:              Jun Honda
maintainer:          jnhnd128@gmail.com
copyright:           (c) 2017, Jun Honda
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:   Monaka.Poetry
                     , Monaka.Markov
                     , Web.Twitter
  build-depends:       base >= 4.7 && < 5
                     , mecab
                     , containers
                     , random
                     , split
                     , markov-chain
                     , authenticate-oauth
                     , bytestring
                     , containers
                     , http-conduit
                     , text
                     , aeson
  default-language:    Haskell2010

executable monaka
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , monaka
                     , bytestring
                     , text
  default-language:    Haskell2010

test-suite monaka-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , monaka
                     , bytestring
                     , text
                     , mecab
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jnhnd/monaka
